updated add2home to close on any touch, not just the tiny x button

--- a/index.html
+++ b/index.html
@@ -92,17 +92,14 @@
   <script type="text/javascript" charset="utf-8">
     var addToHomeConfig = {
       returningVisitor: false,
-      startDelay: 0,
+      startDelay: 1000,
       expire: 0,
       touchIcon: true,
-      lifespan: 2000
+      lifespan: 5000
     };
     $(document).ready(function() {
-      window.onload = function() {
-        setTimeout(function() {
-          window.scrollTo(0, 1);
-        }, 100);
-      }
+      // Hide the URL bar
+      window.scrollTo(0, 1);
       $('#badbutton').on('click', function(event) {
         alert('Click!');
         event.preventDefault();
@@ -160,6 +157,8 @@
     });
   </script>
   <script src='vendor/add2home/add2home.js'></script>
+  <!-- demo-specific hack -->
+  <script>addToHome.reset();</script>
 </body>
 </html>
 
