added google analytics code, updated template.html for easier quick start

--- a/template.html
+++ b/template.html
@@ -14,13 +14,22 @@
   <link rel="apple-touch-startup-image" href="images/startup.png" />
   <!-- Styles -->
   <link rel="stylesheet" href="vendor/add2home/add2home.css" />
-  <link rel='stylesheet' href='styles/styles.css' />
 </head>
 <body>
   <!-- Content -->
 
   <!-- Scripts -->
+  <script>
+    var addToHomeConfig = {
+      returningVisitor: false,
+      startDelay: 1000,
+      expire: 0,
+      touchIcon: true,
+      lifespan: 5000
+    };
+  </script>
   <script src='vendor/add2home/add2home.js'></script>
+  <script src='vendor/zeptojs/zepto.js'></script>
 </body>
 </html>
 
