Updated branding to SDW

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html manifest="/cache.manifest">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Converge</title>
+  <title>Skookum</title>
   <!-- Mobile Settings -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -43,7 +43,7 @@
     <a id='goodbutton' class='button white'>Custom 'singleTap' button</a>
   </p>
 
-  <h1>Ignore standards and accessibility</h1>
+  <h1>Ignore standards &amp; accessibility</h1>
   <p>
     <input name='badRad' id='rad1' type='radio' />
     <label for='rad1'>first</label>
