--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
   <h1>Ignore standards &amp; accessibility</h1>
   <p>
     <input name='badRad' id='rad1' type='radio' />
-    <label for='rad1'>first</label>
+    <label for='rad1'>acces</label>
     <input name='badRad' id='rad2' type='radio' />
-    <label for='rad2'>second</label>
+    <label for='rad2'>ibile</label>
   </p>
   <p>
     <input name='betterRad' id='rad3' type='radio' />
-    <label for='rad3' onclick=''>third</label>
+    <label for='rad3' onclick=''>empty</label>
     <input name='betterRad' id='rad4' type='radio' />
-    <label for='rad4' onclick=''>fourth</label>
+    <label for='rad4' onclick=''>onclick</label>
   </p>
   <ul>
-    <li class='bestRad checked' id='rad5'>fifth</li>
-    <li class='bestRad' id='rad6'>sixth</li>
+    <li class='bestRad checked' id='rad5'>totally</li>
+    <li class='bestRad' id='rad6'>inaccessible</li>
   </ul>
 
   <h1>Use alert() and friends</h1>
